<resources>
    <string name="com_auth0_client_id">C9jyTmMhzscLqC88Axxzy7iQjpK69np4</string>
    <string name="com_auth0_domain">dev-edw1n.us.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>
    <string name="app_name">Tether</string>
    <string name="app_label">Tether</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_devices_found">No devices found</string>
    <string name="add_device">Add device</string>
    <string name="add_your_first_matter_device">Add your first Matter device</string>
    <string name="device">Device</string>
    <string name="default_device_name">My name is very long but who cares</string>
    <string name="offline_warning">Offline warning</string>
    <string name="loading_status">Loading…</string>
    <string name="offline_status">Offline</string>
    <string name="off_status">Off</string>
    <string name="on_status">On</string>
    <string name="brightness_100_perc">100%</string>
    <string name="offline">Offline</string>
    <string name="device_name_hint">Device name goes here</string>
    <string name="avatar">Avatar</string>
    <string name="default_home_name">Someone\'s</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="power">Power</string>
    <string name="color">Color</string>
    <string name="percentage_symbol">%</string>
    <string name="default_brightness">0</string>
    <string name="brightness">Brightness</string>
    <string name="in">In </string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="basic_info">Basic info</string>
    <string name="share_device_hint">You can share this device to control it from other apps or services.</string>
    <string name="share">Share</string>
    <string name="technical_info">Technical Info</string>
    <string name="added_on">Added on:</string>
    <string name="default_date_and_time">04.05.22 19:20:33</string>
    <string name="device_type">Device Type:</string>
    <string name="unknown">Unknown</string>
    <string name="default_device_id">1</string>
    <string name="id">ID:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="delete_device">Delete device</string>
    <string name="power_off">Power is Off</string>
    <string name="power_on">Power is On</string>
    <string name="device_color">Device Color</string>
    <string name="wifi_password">WiFi password</string>
    <string name="enter_wifi_credentials">Enter WiFi Credentials</string>
    <string name="wifi_network_band_hint">Device pairing only supports 2.4GHz WiFi bands. Connect your phone to a 2.GHz and enter the respective credentials</string>
    <string name="wifi_ssid">WiFi SSID</string>
    <string name="cancel">Cancel</string>
    <string name="connecting_msg">Connecting device to Tether…</string>
    <string name="device_not_found">Can\'t find device</string>
    <string name="device_not_found_hint">Make sure the device is powered on and try again</string>
    <string name="device_add_failed">Can\'t add device</string>
    <string name="device_failed_attestation">Device failed attestation</string>
    <string name="exit_setup">Exit setup</string>
    <string name="try_again">Try again</string>
    <string name="device_name">Device name</string>
    <string name="done">Done</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="matter_device_connected">Device connected</string>
    <string name="not_now">Not now</string>
    <string name="remove_device_hint">This device will be removed and unlinked from this app. Other services and connection-type may still have access</string>
    <string name="share_with_apps">Link a Matter-enabled app</string>
    <string name="share_device_method_hint">Choose the code you want to use to invite or link others</string>
    <string name="using_qr_code">Share with QR code</string>
    <string name="using_pairing_code">Using pairing code</string>
    <string name="share_with_pairing_code_hint">Copy this code, open a Matter-enabled app, and enter the code when prompted.  This code will expire in 3 minutes</string>
    <string name="share_with_pairing_code_title">Share with pairing code</string>
    <string name="share_with_qr_code_hint">To allow others to control this device, they need to open a Matter-enabled app on their phone or tablet and scan this QR code. This code will expire in 3 minutes</string>
    <string name="share_with_qr_code_title">Share with QR code</string>
    <string name="copy_pairing_code">Copy pairing code</string>
    <string name="pairing_code_example">0003–4568–910</string>
    <string name="pairing_code_hint">The 11- or 21-digit pairing code may be on the device. If not, you can setup with manufacturer</string>
    <string name="pairing_code">Pairing code</string>
    <string name="enter_matter_pairing_code">Enter Matter pairing code</string>
    <string name="scan_matter_qr_code">Scan Matter QR code</string>
    <string name="scanner_hint">Make sure it\'s steady and well-lit</string>
    <string name="set_up_without_qr_code">Set up without QR code</string>
    <string name="yes_delete">Yes, delete it</string>
    <string name="remove_device_title">Remove this device?</string>
    <string name="rename_device_title">Rename device?</string>
    <string name="qr_code_scan_failed_title">Matter QR code scan failed</string>
    <string name="not_a_matter_certified_device">Not a Matter-certified Device</string>
    <string name="not_a_matter_certified_device_hint">This device has not been certified and may not work reliably</string>
    <string name="add_anyway">Add anyway</string>
    <string name="exit_setup_title">Exit setup?</string>
    <string name="exit_setup_hint">You will need to restart the setup process</string>
    <string name="exit">Exit</string>
    <string name="continue_setup">Continue setup</string>
    <string name="wifi_credentials_title">WiFi Credentials?</string>
    <string name="wifi_credentials_continue">Continue</string>
    <string name="invalid_manual_code_title">Invalid Manual Pairing code</string>
    <string name="setup_with_qr_code">Set up with QR code</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="app_info">App info</string>
    <string name="default_email">support@tether.com</string>
    <string name="logout">Logout</string>
    <string name="default_app_version">v1.0.0</string>
    <string name="default_name">John Smith</string>
    <string name="continue_auth">Continue</string>
    <string name="camera_permission_additional_rationale">Pairing via Matter QR code is unavailable because the feature requires camera permission</string>
    <string name="camera_permission_rationale">Camera access is required to scan the Matter QR code.</string>
    <string name="pairing_permission_additional_rationale">Pairing is unavailable because the feature requires location and nearby devices permissions</string>
    <string name="pairing_permission_rationale">Location and nearby devices permissions are required to scan Matter devices</string>
    <string name="command">Command</string>
</resources>