<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".device.controller.DeviceControllerFragment">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_top_bar"/>

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        >
        <ImageView
            android:id="@+id/iv_device_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/action_settings"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="?attr/colorOnBackground"
            android:src="@drawable/ic_settings_outline" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/rl_top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxWidth="200dp"
            android:ellipsize="end"
            android:textSize="28sp"
            android:text="@string/default_device_name"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxWidth="150dp"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@string/in"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginStart="2dp"
                android:maxWidth="150dp"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@string/default_home_name"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_device_ctrl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_device_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_color">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_power_switch"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="50dp"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/iv_power_ic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/power"
                android:src="@drawable/ic_power_off_round"
                />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_device_status"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_off"
            />

        <RelativeLayout
            android:id="@+id/rl_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/ll_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="start"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_brightness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_brightness"
                        android:textSize="16sp" />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage_symbol"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/sld_brightness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ll_brightness"
                android:valueFrom="1"
                android:valueTo="100"
                android:stepSize="1"
                app:tickVisible="false"
                android:contentDescription="@string/brightness_100_perc" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btn_grp_fan_modes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:visibility="gone"
            >
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_fan_mode_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"/>
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_fan_mode_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"/>
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_fan_mode_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ll_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="@string/color"
        android:orientation="horizontal"
        android:background="@drawable/shape_rectangle_filled"
        app:icon="@drawable/ic_color_lens_round"
        app:layout_constraintTop_toBottomOf="@+id/ll_device_ctrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>