<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/Theme.Tether"
    tools:context=".device.settings.DeviceSettingsFragment">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxWidth="150dp"
            android:maxLines="1"
            android:text="@string/default_device_name"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_top_bar"
        app:layout_constraintBottom_toTopOf="@+id/ll_share_info"
        android:layout_margin="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_info"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <LinearLayout
            android:id="@+id/ll_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/et_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:text="@string/default_device_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_home_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:text="@string/default_home_name"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_device_info"
        app:layout_constraintBottom_toTopOf="@+id/md_divider"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_rectangle_outline_round"
        android:orientation="vertical">

        <MultiAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxWidth="488dp"
            android:textSize="16sp"
            android:text="@string/share_device_hint"
            tools:ignore="LabelFor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle_filled"
                android:text="@string/share"
                android:textAllCaps="false"
                app:icon="@drawable/ic_share_round" />
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/md_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_share_info"
        app:layout_constraintBottom_toTopOf="@+id/ll_tech_info"
        />

    <LinearLayout
        android:id="@+id/ll_tech_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/md_divider"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technical_info"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:layout_marginEnd="10dp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_device_id"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_type"
                android:layout_marginEnd="10dp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_device_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer"
                android:layout_marginEnd="10dp"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_device_manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_on"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/tv_date_added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date_and_time"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/delete_device"
        android:textColor="?attr/colorError"
        android:backgroundTint="?attr/colorTertiaryContainer"
        android:background="@drawable/shape_rectangle_filled"
        app:iconTint="?attr/colorError"
        app:icon="@drawable/ic_delete_round"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_tech_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>