<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_top_bar"/>

    <ImageView
        android:id="@+id/iv_provision_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_compare_arrows_round"
        android:contentDescription="@string/wifi_password"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_prov_status"
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_provision_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:text="@string/connecting_msg"
            android:textSize="24sp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:text="@string/device_not_found_hint"
            android:textSize="18sp"
            android:visibility="gone"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_prov_status_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/unknown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_matter_logo"
        app:tint="?attr/colorPrimary"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pi_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:id="@+id/rl_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="100dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"
            android:text="@string/exit_setup"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:background="@drawable/shape_rectangle_filled"
            android:text="@string/try_again"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>