<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/pv_camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="50dp"
        android:background="@drawable/shape_overlay_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qr_code_scanner_round"
                app:tint="?attr/colorPrimary"
                android:contentDescription="@string/scan_matter_qr_code"
                android:layout_marginVertical="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/scan_matter_qr_code"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/scanner_hint"
                android:textSize="12sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_manual_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:text="@string/set_up_without_qr_code"
            app:strokeColor="@android:color/darker_gray"
            android:textColor="@android:color/white"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>